--- a/FinalProjectTemplate.qmd
+++ b/FinalProjectTemplate.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Estimating Future Crime Rates in Los Angeles Based on Crime Data from 2020 to Present"
+title: "Estimating Future Crime Rates in Los Angeles Based on Crime Data from 2023 to Present"
 author: "jiaxi li"
 format: pdf
 editor: visual
@@ -7,54 +7,54 @@ editor: visual
 
 ## Introduction
 
-This project aims to forecast future crime rates in Los Angeles by analyzing crime data from 2020 to the present. The goal is to explore how factors such as socio-economic changes, mobility patterns, and land-use influence crime dynamics and to use machine learning models to predict future trends. The study will help identify areas of concern, allowing law enforcement to allocate resources more effectively.
+This project aims to forecast future crime rates in Los Angeles by analyzing crime data from 2023 to the present. The goal is to explore how factors such as socio-economic changes, mobility patterns, and land-use influence crime dynamics and to use machine learning models to predict future trends. The study will help identify areas of concern, allowing law enforcement to allocate resources more effectively.
 
 ### Motivations:
 
--   **Infinite Exploration:** "No Man's Sky" delivers a unique sandbox experience, where players can explore countless planets, meet different alien species, and uncover cosmic secrets. The game's limitless nature not only sparks player curiosity but also serves as an excellent focus for our research into how such an expansive environment affects player involvement and loyalty.
+-   **Post-Pandemic Crime Evolution:** The COVID-19 pandemic changed crime trends in cities. Lockdowns, reduced mobility, and economic stress led to fewer property crimes but an increase in domestic violence and cybercrime. This shift provides a chance to study how crises affect criminal behavior and how law enforcement can prepare for future changes.
 
-    **Dynamic Player Base:** It's important for game developers and marketers to understand changes in player engagement. We are keen to find trends connecting price adjustments to shifts in the number of players. Insights from this analysis could help in fine-tuning strategies to enhance player satisfaction and keep them engaged.
+    **Localized Crime Hotspots:** In a large city like Los Angeles, crime isn’t spread evenly. Factors like population density, land use, and socio-economic conditions create crime hotspots. Knowing these patterns is key for law enforcement to use resources wisely and stop crimes before they grow. This study aims to offer targeted insights to improve urban safety.
 
-    **Blockchain Economy:** The use of blockchain technology brings additional complexity to the game's economy, affecting how resources are valued and exchanged. This feature could significantly influence player actions, making it an interesting point for thorough investigation.
+    **Mobility and Criminal Opportunities:** Los Angeles, with its high mobility and frequent visitors, sees crime rates shift based on movement patterns. Areas with heavy foot traffic often have more crime opportunities, partly due to visitor anonymity. This project explores the link between urban mobility and crime to better understand how movement shapes criminal chances.
 
 ### Goal of the Project:
 
 \
-Our main goal is to analyze and understand the historical data of "No Man's Sky," particularly focusing on player numbers and pricing trends. This study will allow us to explore several important questions:
+The main goal of this project is to predict crime rates in Los Angeles based on data from 2023-2024 and to forecast crime trends for the year 2025. By analyzing historical data, this study aims to provide insights that help law enforcement agencies prepare for and address emerging crime patterns. Several key questions will guide this research:
 
-**Impact of Price Reductions:** How do sales and promotional events affect how many players are active? Is there a clear link between these price cuts and increased player activity?
+**Impact of Post-Pandemic Socio-Economic Changes**: How have the socio-economic factors in 2023-2024, such as unemployment rates, population density, and mobility patterns, influenced different types of crime in Los Angeles? Are there observable shifts in criminal behavior that need targeted intervention?
 
-**Pricing Dynamics and Player Activity:** How do changes in the game's price relate to the levels of player activity? Which trends are most effective in attracting new players or keeping current ones?
+**Spatial and Temporal Crime Dynamics**: Which neighborhoods and times of day are most prone to criminal activities? How do urban characteristics, such as mixed land use and foot traffic, affect crime rates in these areas? Understanding these dynamics will allow for better allocation of law enforcement resources.
 
-**Predictive Modeling:** Can machine learning models accurately forecast shifts in player activity based on observed pricing trends? Which methods and models provide the best accuracy and insights into player behaviors?
+**Predictive Modeling**: Can machine learning models accurately forecast crime trends for 2025 based on historical and real-time data? Which methods and models provide the best accuracy for predicting crime rates and identifying emerging hotspots?
 
 ## Illustration / Figure
 
-A figure or a diagram that illustrates the overall model or idea of your project. The idea is to make your report more accessible, especially to readers who are starting by skimming your work. For the project, taking a picture of a hand-drawn diagram is fine, as long as it's legible. PowerPoint is another option. You will not be penalized for hand-drawn illustrations -- you are graded on the design and illustrative power
-
-![](images/clipboard-2233500384.png)
-
-## Background & Related Work (2 points)
-
-*No Man’s Sky*, developed by Hello Games, is a groundbreaking exploration and survival game released in August 2016. Its defining feature is an infinite procedurally generated universe, where players can explore diverse planets, engage in space travel, and uncover cosmic mysteries. The game’s ambitious concept captured the attention of gamers worldwide, leading to high expectations and intense scrutiny during its launch.
+![](images/clipboard-314715545.png)
 
 ### Omissions and Context
 
-While the game initially faced criticism due to missing features promised pre-launch, Hello Games continued to improve and expand *No Man’s Sky* through regular updates. These updates introduced new gameplay mechanics, enhanced graphics, and addressed community feedback. The game’s evolution highlights the importance of ongoing development and player engagement.
+This project aims to fill these gaps by integrating diverse and dynamic data sources, like real-time mobility patterns and socio-economic indicators, to improve the accuracy of crime predictions. By advancing traditional methods and adopting machine learning techniques, the project recognizes the need for continuous model updates and the inclusion of new data to better predict crime trends in an ever-evolving urban landscape.
 
 ## Related Work
 
-1.  **Procedural Generation in Games**:
+1.  Socio-economic, built environment, and mobility conditions associated with crime: A study of multiple cities
 
-    -   *Spore* (2008): Developed by Maxis, *Spore* also employed procedural generation to create entire galaxies, planets, and creatures. It allowed players to evolve their species from single-celled organisms to space-faring civilizations.
+    13 Apr 2020 De Nadai Marco, Xu Yanyan, Letouzé Emmanuel, González Marta C., Lepri Bruno
 
-    -   *Elite Dangerous* (2014): Frontier Developments’ space simulation game features a vast, procedurally generated galaxy with realistic astronomical data. Players can explore, trade, and engage in combat across thousands of star systems.
+    <https://cs.paperswithcode.com/paper/socio-economic-built-environment-and-mobility> 
 
-2.  **Economic Models in Virtual Worlds**:
+2.  Crime Prediction Based On Crime Types And Using Spatial And Temporal Criminal Hotspots
 
-    -   *EVE Online* (2003): CCP Games’ massively multiplayer online game has a complex player-driven economy. Resources, ships, and even political power are traded among players. Economic decisions impact gameplay and alliances.
+    9 Aug 2015 [**Tahani Almanie**](https://paperswithcode.com/author/tahani-almanie), [**Rsha Mirza**](https://paperswithcode.com/author/rsha-mirza), [**Elizabeth Lor**](https://paperswithcode.com/author/elizabeth-lor)
 
-    -   *Cryptocurrencies and NFTs*: The rise of blockchain technology has influenced virtual economies. Games like *Decentraland* and *Axie Infinity* use non-fungible tokens (NFTs) for in-game assets, creating novel economic models.
+    <https://paperswithcode.com/paper/crime-prediction-based-on-crime-types-and> 
+
+3.  Changes in Crime Rates During the COVID-19 Pandemic
+
+    19 May 2021 - Mikaela Meyer, Ahmed Hassafy, Gina Lewis, Prasun Shrestha, Amelia M. Haviland, Daniel S. Nagin ·
+
+    [https://stat.paperswithcode.com/paper/changes-in-crime-rates-during-the-covid-19](#0) 
 
 ## Data Processing
 
@@ -80,103 +80,150 @@ sapply(packages, require, character.only=T)
 ```
 
 ```{r}
+library(caret)
+```
+
+```{r}
+library(lubridate)
+```
+
+```{r}
 library(dplyr)
 
 # Read the CSV files
-player_counts <- read.csv("filtered_player.csv")
-price_history <- read.csv("filtered_price.csv")
+crime_data <- read.csv("Crime_Data_from_2023_to_Present.csv", header = TRUE)
+
 
 
 ```
 
 ```{r}
-head(player_counts)
+head(crime_data)
 ```
 
 ```{r}
-head(price_history)
+colnames(crime_data)
 ```
 
 ```{r}
-merged_data <- merge(player_counts, price_history, by = "DateTime", all = FALSE) 
-head(merged_data)
+sapply(crime_data, function(x) sum(is.na(x)))
+```
+
+```{r}
+crime_data <- crime_data %>% 
+  select(-Crm.Cd.2, -Crm.Cd.3, -Crm.Cd.4,-Weapon.Used.Cd)
+```
+
+```{r}
+crime_data$Vict.Age[is.na(crime_data$Vict.Age)] <- median(crime_data$Vict.Age, na.rm = TRUE)
+
+```
+
+```{r}
+crime_data$DATE.OCC <- as.Date(crime_data$DATE.OCC, format = "%m/%d/%Y") 
+crime_data$Date.Rptd <- as.Date(crime_data$Date.Rptd, format = "%m/%d/%Y") 
+```
+
+```{r}
+crime_data$AREA.NAME <- as.factor(crime_data$AREA.NAME)
+crime_data$Crm.Cd.Desc <- as.factor(crime_data$Crm.Cd.Desc)
+crime_data$Vict.Sex <- as.factor(crime_data$Vict.Sex)
+
+# Step 1.4: Extract day of the week, month, and time of day from date and time columns
+crime_data$Day_of_Week <- weekdays(crime_data$DATE.OCC)
+crime_data$Month <- month(crime_data$DATE.OCC, label = TRUE)
+
+# Step 1.5: Create additional relevant features based on data insights (e.g., categorize crimes by time of day)
+crime_data$Time_of_Day <- case_when(
+  crime_data$TIME.OCC >= 0 & crime_data$TIME.OCC < 600 ~ "Night",
+  crime_data$TIME.OCC >= 600 & crime_data$TIME.OCC < 1200 ~ "Morning",
+  crime_data$TIME.OCC >= 1200 & crime_data$TIME.OCC < 1800 ~ "Afternoon",
+  TRUE ~ "Evening"
+)
+```
+
+```{r}
+single_class_rows <- crime_data %>% 
+  group_by(Crm.Cd.Desc) %>% 
+  filter(n() == 1)
+
+# Remove these from the main dataset and create a train-test split without them
+main_data <- anti_join(crime_data, single_class_rows)
+```
+
+## 
+
+## Decision Tree Model building
+
+```{r}
+set.seed(123)
+trainIndex <- createDataPartition(main_data$Crm.Cd.Desc, p = 0.7, list = FALSE)
+train_data <- main_data[trainIndex, ]
+test_data <- main_data[-trainIndex, ]
+
+train_data <- bind_rows(train_data, single_class_rows)
+
+```
+
+```{r}
+# Train the model using relevant features
+tree_model <- rpart(Crm.Cd.Desc ~ AREA.NAME + Vict.Age + Day_of_Week + Month + Time_of_Day, data = train_data, method = "class")
+
+# View the model's summary
+summary(tree_model)
+
+
+```
+
+```{r}
+predictions <- predict(tree_model, test_data, type = "class")
+```
+
+```{r}
+importance <- varImp(tree_model, scale = FALSE)
+
+# Plot the variable importance using ggplot2
+ggplot2::ggplot(importance, aes(x = reorder(rownames(importance), Overall), y = Overall)) +
+  geom_bar(stat = "identity", fill = "steelblue") +
+  coord_flip() +
+  labs(title = "Variable Importance in Crime Prediction Model", x = "Features", y = "Importance")
 ```
 
 ```{r}
 
 ```
 
-## Architecture
+```{r}
 
-A description of the final model. Do not describe all the intermediate models that you have tried. Instead, present the model (or models) whose quantitative results you will show. These should be your most interesting models. Be as specific as you can while being concise. Readers should be able to reproduce a model similar enough to yours and obtain a similar performance.
+```
 
-## Baseline Model
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
 
 Describe a simple, baseline model that you will compare your neural network against. This can be a simple model that you build.
 
 ## Quantitative Results
 
-```{r}
-library(randomForest)
-library(Metrics)
-library(ggplot2)
+```{}
 ```
 
 ## random forest
 
-```{r}
-merged_data$DateTime <- as.Date(merged_data$DateTime)
-set.seed(123) # For reproducibility
-training_indices <- sample(1:nrow(merged_data), nrow(merged_data) * 0.7)
-train_data <- merged_data[training_indices, ]
-test_data <- merged_data[-training_indices, ]
-
-# Build the baseline model (Linear Regression)
-baseline_model <- lm(Players ~ finalprice, data=train_data)
-baseline_pred <- predict(baseline_model, newdata=test_data)
-
-# Build the final model (Random Forest)
-final_model <- randomForest(Players ~ finalprice, data=train_data, ntree=500)
-final_pred <- predict(final_model, newdata=test_data)
-
-# Quantitative Results
-# Calculate MAE and R-squared for the baseline model
-baseline_mae <- mae(test_data$Players, baseline_pred)
-baseline_r_squared <- cor(test_data$Players, baseline_pred)^2
-
-# Calculate MAE and R-squared for the final model
-final_mae <- mae(test_data$Players, final_pred)
-final_r_squared <- cor(test_data$Players, final_pred)^2
-
-# Qualitative Results
-# Compare actual and predicted values
-qualitative_results <- data.frame(Actual=test_data$Players, Baseline_Predicted=baseline_pred, Final_Predicted=final_pred)
-head(qualitative_results)
-
-# Discussion
-# Here you would discuss the results, potentially including visualizations like:
-# A plot showing actual vs predicted player counts
-ggplot() +
-  geom_line(aes(x = test_data$DateTime, y = test_data$Players), color = 'blue') +
-  geom_line(aes(x = test_data$DateTime, y = final_pred), color = 'red') +
-  labs(title = "Actual vs Predicted Player Counts", x = "Date", y = "Player Count")
-
+```{}
 ```
 
 ## Linear regression
 
-```{r}
-results <- cbind(test_data, Predicted = baseline_pred)
-
-ggplot(results, aes(x = DateTime, y = Players)) +
-  geom_line(aes(y = Predicted), color = 'red') +
-  geom_point(aes(y = Predicted), color = 'red') +
-  geom_line(color = 'blue') +
-  geom_point(color = 'blue') +
-  labs(title = "Actual vs Predicted Players Using Linear Regression",
-       x = "Date",
-       y = "Number of Players") +
-  theme_minimal()
+```{}
 ```
 
 A description of the quantitative measures of your result. What measurements can you use to illustrate how your model performs?
